@@ -46,7 +46,7 @@ GtkWidget* mud_connection_view_get_viewport (MudConnectionView *view);
 void mud_connection_view_disconnect (MudConnectionView *view);
 void mud_connection_view_reconnect (MudConnectionView *view);
 void mud_connection_view_send (MudConnectionView *view, const gchar *data);
-void mud_connection_view_set_connect(gchar *connect_string);
+void mud_connection_view_set_connect_string(MudConnectionView *view, gchar *connect_string);
 
 G_END_DECLS
 
