@@ -1,3 +1,7 @@
+2005-12-29  Robin Ericsson  <lobbin@localhost.nu>
+
+	* src/mud-connection-view.[ch]: Removed use global variables.
+
 2005-12-28  Les Harris  <lescom@comcast.net>
 
 	* Added a hook into MudConnectionView allowing for
